--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "login",
-    "slug": "login",
+    "name": "LoginApp",
+    "slug": "LoginApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
